--- a/app/components/Home.css
+++ b/app/components/Home.css
@@ -20,10 +20,21 @@
     display: block;
     position: relative;
     text-align: center;
-    color: transparent;
     font-size: 0px;
-    background-image: url("/static/barney.jpg");
-    background-size: 250px 200px;
-    width: 250px;
-    height: 200px;
+}
+
+
+.stockRow {
+  fontSize : 12px;
+  color:  red;
+}
+
+.flexRow {
+  display: flex;
+  flex-direction: row;
+}
+
+.button{
+  width : 70px;
+  height : 30px;
 }
